[package]
name = "doist"
homepage = "https://github.com/chaosteil/doist"
repository = "https://github.com/chaosteil/doist"
authors = ["Dominykas Djacenko <chaosteil@gmail.com>"]
version = "0.3.0"
edition = "2021"
description = "doist is an unofficial command line app for interacting with the Todoist API"
license = "MIT"
readme = "README.md"
keywords = ["todoist", "todo", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "doist"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.0", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
color-eyre = { version = "0.6.3", default-features = false }
config = { version = "0.15.4", features = ["toml"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indicatif = "0.17.9"
json-patch = "3.0.1"
lazy_static = "1.5.0"
num-traits = "0.2.19"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
reqwest = "0.12.11"
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.134"
serde_repr = "0.1.19"
serde_with = "3.12.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.8.19"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
xdg = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
wiremock = "0.6.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
