[package]
name = "doist"
homepage = "https://github.com/chaosteil/doist"
repository = "https://github.com/chaosteil/doist"
authors = ["Dominykas Djacenko <chaosteil@gmail.com>"]
version = "0.3.5"
edition = "2024"
description = "doist is an unofficial command line app for interacting with the Todoist API"
license = "MIT"
readme = "README.md"
keywords = ["todoist", "todo", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "doist"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive", "wrap_help"] }
color-eyre = { version = "0.6.5", default-features = false }
config = { version = "0.15.14", features = ["toml"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indicatif = "0.18.0"
json-patch = "4.0.0"
lazy_static = "1.5.0"
num-traits = "0.2.19"
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
reqwest = "0.12.23"
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.143"
serde_repr = "0.1.20"
serde_with = "3.14.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.8.23"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
xdg = "3.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
wiremock = "0.6.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
